// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HintText matches snapshot: enzyme.mount 1`] = `
<glamorous(span)>
  <span
    className="css-3tj0gg"
  >
    example
  </span>
</glamorous(span)>
`;

exports[`HintText matches snapshot: enzyme.render 1`] = `
<span
  class="css-3tj0gg"
>
  example
</span>
`;

exports[`HintText matches snapshot: enzyme.shallow 1`] = `
<span
  className="css-3tj0gg"
>
  example
</span>
`;
